
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ egg_hunter ;
 int printf (char*,int) ;
 scalar_t__ shell_code ;
 int strlen (scalar_t__) ;

main()
{
        printf("Egg hunter length:  %d\n", strlen(egg_hunter));
 printf("Total length: %d\n", strlen(egg_hunter)+strlen(shell_code));
        int (*ret)() = (int(*)())egg_hunter;
        ret();
}
