; ModuleID = '/home/carl/AnghaBench/exploitdb/shellcodes/linux_x86/extr_40827.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/shellcodes/linux_x86/extr_40827.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [24 x i8] c"Egg hunter length:  %d\0A\00", align 1
@egg_hunter = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [18 x i8] c"Total length: %d\0A\00", align 1
@shell_code = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32 (...)*, align 8
  %2 = load i64, i64* @egg_hunter, align 8
  %3 = call i32 @strlen(i64 %2)
  %4 = call i32 @printf(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i32 %3)
  %5 = load i64, i64* @egg_hunter, align 8
  %6 = call i32 @strlen(i64 %5)
  %7 = load i64, i64* @shell_code, align 8
  %8 = call i32 @strlen(i64 %7)
  %9 = add nsw i32 %6, %8
  %10 = call i32 @printf(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0), i32 %9)
  %11 = load i64, i64* @egg_hunter, align 8
  %12 = inttoptr i64 %11 to i32 (...)*
  store i32 (...)* %12, i32 (...)** %1, align 8
  %13 = load i32 (...)*, i32 (...)** %1, align 8
  %14 = call i32 (...) %13()
  ret i32 0
}

declare dso_local i32 @printf(i8*, i32) #1

declare dso_local i32 @strlen(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
